[FIX] Component: Fixed screen scrolling when cards were offscreen

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body,
 #root {
   height: 100%;
@@ -24,3 +24,4 @@ code {
 *:before {
   box-sizing: border-box;
 }
+ */
