--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -1,3 +1,11 @@
+html, body {
+  margin:0;
+  padding: 0;
+  height: 200%;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
 .container {
     background: lightblue;
     display: flex;
